# scisoft-core

./: .gitignore  HDF5Loader.java  README.md  pom.xml
uk.ac.diamond.scisoft.python/src/: Pipfile  pyproject.toml  setup.cfg  setup.py
uk.ac.diamond.scisoft.python/src/conda/: meta.yaml
uk.ac.diamond.scisoft.python/src/py4j/: protocol.py  version.txt
uk.ac.diamond.scisoft.python/src/pyrpc/: pybeans.py  pyflatten.py  pymaths.py  pyroi.py  pyrpc.py  rpc.py
uk.ac.diamond.scisoft.python/src/scisoftpy/: __init__.py  crystallography.py  data.py  dictutils.py  diffraction.py  external.py  fft.py  flatten.py  image.py  io.py  linalg.py  maths.py  plot.py  random.py  roi.py  rpc.py  signal.py
uk.ac.diamond.scisoft.python/src/scisoftpy/_external/: tifffile.c  tifffile.py
uk.ac.diamond.scisoft.python/src/scisoftpy/fit/: __init__.py  fitcore.py  function.py
uk.ac.diamond.scisoft.python/src/scisoftpy/jython/: fitcore.py  function.py  jybeans.py  jycomparisons.py  jycore.py  jycrystallography.py  jydata.py  jydiffraction.py  jyfft.py  jyflatten.py  jyhdf5io.py  jyimage.py  jyio.py  jylinalg.py  jymaths.py  jynxio.py  jyplot.py  jyplottingsystem.py  jyrandom.py  jyroi.py  jyrpc.py  jyscisoft.py  jysignal.py  jywrapper.py
uk.ac.diamond.scisoft.python/src/scisoftpy/nexus/: __init__.py  hdf5.py  nxclasses.py  utils.py
uk.ac.diamond.scisoft.python/src/scisoftpy/python/: py4jutils.py  pybeans.py  pycomparisons.py  pycore.py  pydata.py  pyflatten.py  pyh5py.py  pyhdf5io.py  pyio.py  pymaths.py  pynapi.py  pynx.py  pynxio.py  pyplot.py  pyplottingsystem.py  pyprofile.py  (+5 more)
(+4188 files in other folders)
