[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scisoftpy"
version = "2.37.1"
description = "DAWN Python Extensions"
license = { text = "Apache-2.0" }
authors = [
    {name = "Peter Chang"}
]
maintainers = [
    {name = "Data Analysis group", email = "dataanalysis@diamond.ac.uk"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "h5py", # depends on numpy
    "Pillow",
    "packaging; python_version >= '3.10'",
]

[project.optional-dependencies]
all = [
    "tifffile[all]",
    "pycbf[all]"
]

[project.urls]
source = "https://github.com/DawnScience/scisoft-core"

[tool.setuptools.packages.find]
include = ["scisoftpy*"]
namespaces = false

